[api] notes and pins